# deck52

./: .gitignore  README.md  README.org  flake.nix
.github/workflows/: docs.yml  flake_update.yml
clojure/: README.md  project.clj
clojure/src/deck52/: core.clj
docs/: .gitignore  deck52.org
haskell/: README.md  deck52.cabal
haskell/app/: Main.hs
lib/nix/: clojure.nix  haskell.nix  nix.nix  python.nix  rust.nix  typescript.nix
python/: .gitignore  README.md  pyproject.toml
python/src/deck52/: main.py
rust/: .gitignore  Cargo.toml  README.md
rust/src/: main.rs
typescript/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: index.ts
